--- a/punt_eltete/views/product_template.xml
+++ b/punt_eltete/views/product_template.xml
@@ -90,9 +90,12 @@
         <field name="arch" type="xml">
             <tree string="Producto">
                 <field name="name"/>
+		<field name="j_interior"/>
                 <field name="ancho_interior"/>
-				<field name="ancho_superficie"/>
-				<field name="comentario"/>
+		<field name="j_superficie"/>
+		<field name="j_superficie_max"/>
+		<field name="ancho_superficie"/>
+		<field name="comentario"/>
             </tree>
         </field>
     </record>
@@ -105,11 +108,10 @@
             <form string="Ofertas">
                 <sheet>
                     <group>
-                        
                         <field name="type_id" domain="[('product_type','=',True)]"/>
-						<field name="name" />
-						<field name="titulo" />
-						<field name="orden"/>
+			<field name="name" />
+			<field name="titulo" />
+			<field name="orden"/>
                         <field name="is_cantonera" invisible="1"/>
                         <field name="is_perfilu" invisible="1"/>
                         <field name="is_slipsheet" invisible="1"/>
@@ -126,18 +128,14 @@
                         <field name='ala_1' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
                         <field name='ancho' attrs="{'invisible': ['|',('is_cantonera', '=', True),('is_pieballet', '=', True),]}"/>
                         <field name='ala_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
-                        <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
                         <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
-                        <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
                         <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
+			<field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
                         <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
+			<field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
                         <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
                         <field name='gramaje' attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
-                        <field name='ancho_interior'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                        <field name='ancho_superficie'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                        <field name='peso_metro_user'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
-                        <field name='metros_unidad_user'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
-						<field name="comentario"/>
+                        <field name='varios_id'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
                     </group>
                     
                     <h3>Cálculos</h3>
@@ -146,10 +144,12 @@
                         <field name='metros_unidad' />
                         <field name='j_gram' />
                         <field name='j_interior' />
+			<field name='ancho_interior'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
                         <field name='j_superficie' />
-						<field name='j_superficie_max' />
+			<field name='j_superficie_max' />
+			<field name='ancho_superficie'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+			<field name="comentario"/>
                     </group>
-                    
 
                 </sheet>
             </form>
