--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -42,7 +42,7 @@
                             <field name="is_solidboard" invisible="1"/>
                             <field name="is_formato" invisible="1"/>
                             <field name="is_bobina" invisible="1"/>
-                            <field name="is_pieballet" invisible="1"/>
+                            <field name="is_piepallet" invisible="1"/>
                             <field name="is_varios" invisible="1"/>
 			    <field name="ocultar" invisible="1"/>
                         </group>
@@ -178,7 +178,8 @@
                                 <field name='plancha_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_solidboard', '=', False)]}"/>
                                 <field name='papel_calidad_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
                                 <field name='troquelado_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_formato', '=', False),]}"/>
-                                
+                                <field name='pie_adhesivo' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_piepallet', '=', False),]}"/>
+				    
                                 <field name="referencia_cliente_id" invisible="1"  />
                                 <field name="type_id"  invisible="1" />
                                 <field name="is_cantonera" invisible="1"/>
