--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -7,9 +7,9 @@
             <field name="arch" type="xml">
                 <tree string="Producto">
                     <field name="name"/>
+                    <field name="comentario_paletizado"/>
                     <field name="partner_id"/>
-                    <field name="user_id"/>     
-	            <field name="comentario_paletizado"/>
+                    <field name="user_id"/>                    
                 </tree>
             </field>
         </record>
@@ -21,10 +21,10 @@
             <field name="arch" type="xml">
                 <form string="Ofertas">
                     <header>
-                        <!--<button name="bor_to_ref" type="object" string="Guardar y continuar" states="BOR" />-->
-			
-                        <!--<button name="ref_to_rcl" type="object" string="Guardar ref cliente" states="REF" />-->
-			<button name="ocultar_datos" type="object" string="Mostrar / Ocultar datos" attrs="{'invisible': [('ocultar', '=', 'False')]}"  states="REF,RCL"/>
+                        <button name="bor_to_ref" type="object" string="Guardar y continuar" states="BOR" />
+						<button name="bor_to_rcl" type="object" string="Paso 1 y 2" states="BOR" />
+                        <button name="ref_to_rcl" type="object" string="Guardar ref cliente" states="REF" />
+						<button name="ocultar_datos" type="object" string="Mostrar / Ocultar datos" attrs="{'invisible': [('ocultar', '=', 'False')]}"  states="REF,RCL"/>
                         <!--<button name="cancel_offer" type="object" string="Cancelar" states="REF,RCL" />-->
                         <field name="state" widget="statusbar"/>
                     </header>
@@ -35,69 +35,79 @@
                             <field name="user_id"/>
                             <field name="date" invisible="1"/>
                             <field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}"  attrs="{'readonly': [('state', '!=', 'BOR')]}"/>
-			    <field name="precio_cliente"/>
+							<field name="precio_cliente"/>
                             <field name="is_cantonera" invisible="1"/>
                             <field name="is_perfilu" invisible="1"/>
                             <field name="is_slipsheet" invisible="1"/>
                             <field name="is_solidboard" invisible="1"/>
                             <field name="is_formato" invisible="1"/>
                             <field name="is_bobina" invisible="1"/>
-                            <field name="is_piepallet" invisible="1"/>
+                            <field name="is_pieballet" invisible="1"/>
                             <field name="is_varios" invisible="1"/>
-			    <field name="ocultar" invisible="1"/>
+							<field name="ocultar" invisible="1"/>
                         </group>
                         
                         <h3 attrs="{'invisible': [('state', '!=', 'BOR')]}">Referencia</h3>
                         <group attrs="{'invisible': [('state', '!=', 'BOR')], 'readonly': [('state','!=','BOR')]}" >
-			    <field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
+							<field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
                             <field name='ala_1' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
                             <field name='ancho' attrs="{'invisible': ['|',('is_cantonera', '=', True),('is_pieballet', '=', True),]}"/>
                             <field name='ala_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
                             <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
                             <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
-			    <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
+							<field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
                             <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
                             <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
                             <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
                             <field name='gramaje' attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
-                            <field name='varios_id'  attrs="{'invisible': [('is_varios', '=', False)]}"/>			
+                            <!--<field name='ancho_interior'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                            <field name='ancho_superficie'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>-->
+                            <field name='peso_metro_user'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
+                            <field name='metros_unidad_user'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
+							
                         </group>
                         
                         <group attrs="{'invisible': [('state', 'in', ['BOR',])]}">
                             <field name='referencia_id' />                            
                         </group>
                         
-                        <button name="bor_to_rcl" type="object" string="Continuar" states="BOR" />
+
                         
                         <br/><br/>
                         
                         <group attrs="{'invisible': ['|', ('state', 'in', ['BOR']), ('ocultar', '=', True)]}" >
                             <group>
                                 <h3 attrs="{'invisible': [('state', 'in', ['BOR'])]}">Referencia cliente</h3><br/>
-				<field name="comentario_referencia"/>
+								<field name="comentario_referencia"/>
                                 <field name="referencia_cliente_nombre"/>
-				<field name="pallet_especial_id"/>
-				<field name="paletizado_cliente" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-				<field name="ancho_pallet_cliente" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_varios', '=', False),]}"/>
-				<field name="contenedor" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_varios', '=', False),]}"/>
-				<field name="und_paquete_cliente" attrs="{'invisible': [('is_cantonera', '=', False),('is_formato', '=', False),('is_varios', '=', False),]}"/>
-				<field name="und_pallet_cliente"/>
-				<field name="alto_max_cliente"/>
-				<field name="peso_max_cliente"/>
-				<field name="comentario_paletizado"/>				
+								<field name="pallet_especial_id"/>
+								<field name="paletizado_cliente" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+								<field name="ancho_pallet_cliente" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_varios', '=', False),]}"/>
+								<field name="contenedor" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_varios', '=', False),]}"/>
+								<field name="und_paquete_cliente" attrs="{'invisible': [('is_cantonera', '=', False),('is_formato', '=', False),('is_varios', '=', False),]}"/>
+								<field name="und_pallet_cliente"/>
+								<field name="alto_max_cliente"/>
+								<field name="peso_max_cliente"/>
+								<field name="comentario_paletizado"/>
+								
+								
                             </group>
                             <group>
                                 <h3 attrs="{'invisible': [('state', 'in', ['BOR'])]}">Campos calculados</h3><br/>
                                 <field name="paletizado"/>
-				<field name="ancho_pallet"/>
-				<field name="und_paquete"/>
-				<field name="paquetes_fila"/>
-				<field name="alto_fila"/>
+								<field name="ancho_pallet"/>
+								<field name="und_paquete"/>
+								<field name="paquetes_fila"/>
+								<field name="alto_fila"/>
                                 <field name="fila_max"/>
                                 <field name="fila_buena"/>
                             </group>
                         </group>
+						
 
+                        
+                        
+                        
                         <br/><br/>
                         <h3 attrs="{'invisible': [('state', 'in', ['BOR', 'REF'])]}">ATRIBUTOS</h3>
                         <field name="attribute_ids" context="{'default_referencia_cliente_id': active_id,  }" attrs="{'invisible': [('state', 'in', ['BOR', 'REF'])]}">
@@ -110,17 +120,23 @@
                         <h3 attrs="{'invisible': [('state', 'in', ['BOR', 'REF'])]}">OFERTAS</h3>
                         <field name="oferta_ids" context="{'default_referencia_cliente_id': id, }" attrs="{'invisible': [('state', 'in', ['BOR', 'REF'])]}">
                             <tree string="Ofertas">
-				<field name='referencia_cliente_id' invisible="1" />
-				<field name='date' />
-				<field name='fecha_enviada' />
+								<field name='date' />
+                                <field name='referencia_cliente_id' invisible="1" />
                                 <field name='attribute_id' domain="[('referencia_cliente_id','=', referencia_cliente_id)]" />
-				<field name='name' />
+								<field name='und_pallet' />
+                                <field name='num_pallets' />
+								<field name='name' />
                                 <field name='state_id' />
                                 <field name='country_id' />
-				<field name='estado' />				
+								
                             </tree>
                         </field>   
-
+                        
+                        
+                        
+                        
+                        
+                        
                     </sheet>
                 </form>
             </field>
@@ -169,6 +185,10 @@
                     <sheet>
                         <group>
                             <group>
+                            
+                                
+
+                                
                                 <field name='name' />
                                 <field name='cantonera_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
                                 <field name='cantonera_forma_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
@@ -178,8 +198,8 @@
                                 <field name='plancha_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_solidboard', '=', False)]}"/>
                                 <field name='papel_calidad_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
                                 <field name='troquelado_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_formato', '=', False),]}"/>
-                                <field name='pie_adhesivo' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_piepallet', '=', False),]}"/>
-				    
+                                <field name='description' />
+                                
                                 <field name="referencia_cliente_id" invisible="1"  />
                                 <field name="type_id"  invisible="1" />
                                 <field name="is_cantonera" invisible="1"/>
@@ -204,7 +224,6 @@
                         <br/><br/><h3>Campos calculados</h3>
                         <group>
                             <group>
-				<field name='estado' />
                                 <field name='cantonera_1' />
                                 <field name='cantonera_2' />
                                 <field name='cantonera_3' />
@@ -218,6 +237,19 @@
                                 <field name='incremento_pallet' />
                             </group>
                         </group>
+                        
+                        <!--<br/><br/><h3>Ofertas</h3>
+                        <field name="oferta_ids" context="{'default_attribute_id': active_id,  }" readonly="1">
+                            <tree string="Ofertas">
+                                <field name='date' />
+                                <field name='num_pallets' />
+                                <field name='und_pallet' />
+                                <field name='state_id' />
+                                <field name='country_id' />
+                                <field name='name' />
+                                <field name='titulo' />
+                            </tree>
+                        </field>   -->
 
                     </sheet>
                 </form>
@@ -233,14 +265,14 @@
             <field name="priority" eval="16"/>
             <field name="arch" type="xml">
                 <tree string="Producto">
-		    <field name='date' />
-	            <field name='fecha_enviada' />
+					<field name='date' />
                     <field name='referencia_cliente_id' />
-		    <field name='attribute_id' />
-		    <field name='name' />
-		    <field name='state_id' />
-		    <field name='country_id' />
-		    <field name='estado' />
+					<field name='attribute_id' />
+					<field name='und_pallet' />
+					<field name='num_pallets' />
+					<field name='name' />
+					<field name='state_id' />
+					<field name='country_id' />
 					
                 </tree>
             </field>
@@ -265,9 +297,9 @@
                                 <field name='country_id' />
 				<field name='num_pallets' />
 				<field name='unidades' />
-				<field name='precio_metro' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('precio_cliente', '=', '4'),]}"/>
-				<field name='kilos' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'), ('precio_cliente', '=', '3'),]}"/>
-				<field name='precio_kilo' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('precio_cliente', '=', '1'), ('precio_cliente', '=', '2'), ('precio_cliente', '=', '3'),]}"/>
+				<field name='precio_metro' />
+				<field name='kilos' />
+				<field name='precio_kilo' />
                             </group>
                             <group>
 				<h3>Unidades por Pallet:</h3>
@@ -275,17 +307,13 @@
 				<field name='peso_neto' />
                                 <field name='peso_bruto' />
 				<field name='und_pallet' />
-				<group>
-				    <button name="resta_filas" type="object" string="-" />
-				</group>
-				<group>
+				<button name="resta_filas" type="object" string="-" />
 				<button name="suma_filas" type="object" string="+" />
-				</group>
-				</br>
 				<h3>Precio:</h3>
 				<field name='peso_metro' />
                                 <field name='tarifa' />
                                 <field name='tarifa_id' />
+
                             </group>
                         </group>
                         
@@ -333,5 +361,8 @@
             <field name="view_mode">tree,form</field>
         </record>
     
-
+   
+    
+    
+    
 </odoo>
